# libopencor

./: .clang-format  .codespellexclude  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  VERSION.txt  biome.json  clean  clean.bat  newversion  newversion.bat  pyproject.toml  setup.py
cmake/staticlibrary/: CMakeLists.txt
doc/: team.html  (+13 more)
src/: CMakeLists.txt  compiler.cpp  compiler.h  dummy.cpp  file.cpp  file_p.h  issue.cpp  issue_p.h  logger.cpp  logger_p.h  noexports.h  sedabstracttask.cpp  sedabstracttask_p.h  sedalgorithmparameter.cpp  sedalgorithmparameter_p.h  sedbase.cpp  sedbase_p.h  seddatadescription.cpp  seddatadescription_p.h  seddatagenerator.cpp  seddatagenerator_p.h  seddocument.cpp  seddocument_p.h  sedmodel.cpp  sedmodel_p.h  sedoutput.cpp  sedoutput_p.h  sedsimulation.cpp  sedsimulation_p.h  sedstyle.cpp  sedstyle_p.h  simulation.cpp  simulation_p.h  simulationdata.cpp  simulationdata_p.h  simulationresults.cpp  simulationresults_p.h  utils.cpp  utils.h  version.cpp  (+5 more)
src/api/libopencor/: file.h  filemanager.h  issue.h  logger.h  pimpl.h  sedabstracttask.h  sedalgorithmparameter.h  sedanalysis.h  sedbase.h  sedchange.h  sedchangeattribute.h  seddatadescription.h  seddatagenerator.h  seddocument.h  sedinstance.h  sedinstancetask.h  sedjob.h  sedmodel.h  sedonestep.h  sedoutput.h  sedrepeatedtask.h  sedsimulation.h  sedsimulationonestep.h  sedsimulationsteadystate.h  sedsimulationuniformtimecourse.h  sedsteadystate.h  sedstyle.h  sedtask.h  seduniformtimecourse.h  simulation.h  simulationdata.h  simulationresults.h  solver.h  solvercvode.h  solverforwardeuler.h  solverfourthorderrungekutta.h  solverheun.h  solverinfo.h  solverkinsol.h  solvernla.h  (+7 more)
src/bindings/: CMakeLists.txt
src/bindings/javascript/: CMakeLists.txt  file.cpp  issue.cpp  javascript.cpp  logger.cpp  main.cpp  package.in.json  package.json.in  package.types.in.json  postprocess.dts.mjs  sed.cpp  sedabstracttask.cpp  sedalgorithmparameter.cpp  sedbase.cpp  seddatadescription.cpp  seddatagenerator.cpp  seddocument.cpp  sedmodel.cpp  sedoutput.cpp  sedsimulation.cpp  sedstyle.cpp  simulation.cpp  simulationdata.cpp  simulationresults.cpp  solver.cpp  version.cpp
src/bindings/python/: CMakeLists.txt  file.cpp  glibc.cpp  glibc_arc4random.cpp  glibc_strtol.cpp  issue.cpp  logger.cpp  main.cpp  python.cpp  sed.cpp  sedabstracttask.cpp  sedalgorithmparameter.cpp  sedbase.cpp  seddatadescription.cpp  seddatagenerator.cpp  seddocument.cpp  sedmodel.cpp  sedoutput.cpp  sedsimulation.cpp  sedstyle.cpp  simulation.cpp  simulationdata.cpp  simulationresults.cpp  solver.cpp  version.cpp
src/file/: file.cpp  file_p.h  filemanager.cpp  filemanager.h  filemanager_p.h
src/logger/: issue.cpp  issue_p.h  logger.cpp  logger_p.h
src/misc/: compiler.cpp  compiler.h  compiler_p.h  filemanager.cpp  filemanager.h  runtime.cpp  runtime.h  unittestingexport.h  utils.cpp  utils.h
src/sed/: sedabstracttask.cpp  sedabstracttask_p.h  sedalgorithmparameter.cpp  sedalgorithmparameter_p.h  sedanalysis.cpp  sedanalysis_p.h  sedbase.cpp  sedbase_p.h  sedchange.cpp  sedchange_p.h  sedchangeattribute.cpp  sedchangeattribute_p.h  seddatadescription.cpp  seddatadescription_p.h  seddatagenerator.cpp  seddatagenerator_p.h  seddocument.cpp  seddocument_p.h  sedinstance.cpp  sedinstance_p.h  sedinstancetask.cpp  sedinstancetask_p.h  sedjob.cpp  sedjob_p.h  sedmodel.cpp  sedmodel_p.h  sedonestep.cpp  sedonestep_p.h  sedoutput.cpp  sedoutput_p.h  sedrepeatedtask.cpp  sedrepeatedtask_p.h  sedsimulation.cpp  sedsimulation_p.h  sedsimulationonestep.cpp  sedsimulationonestep_p.h  sedsimulationsteadystate.cpp  sedsimulationsteadystate_p.h  sedsimulationuniformtimecourse.cpp  sedsimulationuniformtimecourse_p.h  (+8 more)
src/solver/: solver.cpp  solver.h  solver_p.h  solvercvode.cpp  solvercvode.h  solvercvode_p.h  solverforwardeuler.cpp  solverforwardeuler.h  solverforwardeuler_p.h  solverfourthorderrungekutta.cpp  solverfourthorderrungekutta.h  solverfourthorderrungekutta_p.h  solverheun.cpp  solverheun.h  solverheun_p.h  solverinfo.cpp  solverinfo_p.h  solverkinsol.cpp  solverkinsol.h  solverkinsol_p.h  solvernla.cpp  solvernla.h  solvernla_p.h  solverode.cpp  solverode.h  solverode_p.h  solverodefixedstep.cpp  solverodefixedstep_p.h  solverodeunknown.cpp  solverodeunknown.h  solverodeunknown_p.h  solverproperty.cpp  solverproperty.h  solverproperty_p.h  solversecondorderrungekutta.cpp  solversecondorderrungekutta.h  solversecondorderrungekutta_p.h  solverunknown.cpp  solverunknown.h  solverunknown_p.h
src/support/: cellmlfile.cpp  cellmlfile.h  cellmlfile_p.h  cellmlfileruntime.cpp  cellmlfileruntime.h  cellmlfileruntime_p.h  cellmlsupport.cpp  cellmlsupport.h  combinearchive.cpp  combinearchive.h  combinearchive_p.h  combinesupport.cpp  combinesupport.h  sedmlfile.cpp  sedmlfile.h  sedmlfile_p.h  sedmlsupport.cpp  sedmlsupport.h  support.cpp  support.h  supportedfile.cpp  supportedfile.h  supportedfilemanager.cpp  supportedfilemanager.h
src/support/cellml/: cellmlfile.cpp  cellmlfile.h  cellmlfile_p.h  cellmlfilemanager.cpp  cellmlfilemanager.h  cellmlfileruntime.cpp  cellmlfileruntime.h  cellmlfileruntime_p.h
src/support/combine/: combinearchive.cpp  combinearchive.h  (+3 more)
tests/: CMakeLists.txt  memory_checks.py  memorychecks.py  utils.cpp  utils.h.in  utils.in.h
tests/bindings/: CMakeLists.txt
tests/compiler/: tests.cmake  tests.cpp
tests/file/: basictests.cpp  coveragetests.cpp  instantiatetests.cpp  resolvetests.cpp  tests.cmake  tests.cpp  typetests.cpp
tests/header_files/: tests.cmake  tests.cpp.in  tests.in.cpp
tests/headerfiles/: tests.cmake  tests.cpp.in  tests.in.cpp
tests/install/: CMakeLists.txt
tests/misc/: compilertests.cpp  failingsimulationtests.cpp  tests.cmake  utils.cpp
tests/res/: cellml_1_x.cellml  cellml_1_x.omex  cellml_1_x.sedml  cellml_2.cellml  cellml_2.omex  cellml_2.sedml  error.sedml  sbml.sbml  unknown_file.txt  warning.cellml
tests/runtime/: tests.cmake
tests/simulation/: tests.cpp
tests/solver/: tests.cmake  tests.cpp
tests/version/: tests.cmake  tests.cpp  version.cpp
(+283 files in other folders)
